--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+ $govuk-images-path: "/assets/";
+ $govuk-fonts-path: "/assets/";
+ $govuk-font-url-function: 'font-url';
+ $govuk-image-url-function: 'image-url';
+
+ $govuk-global-styles: true;
+
+ @import "govuk-frontend/govuk/all";
