--- a/app/views/search/_options_form.html.haml
+++ b/app/views/search/_options_form.html.haml
@@ -1,19 +1,18 @@
 = form_with url: search_new_path, local: true do |f|
   .govuk-form-group
     %fieldset.govuk-fieldset{ 'aria-describedby' => "search-option-hint" }
-      %legend.govuk-fieldset__legend.govuk-fieldset__legend--xl
-        %h1.govuk-fieldset__heading
-          Choose search option
+      %legend.govuk-fieldset__legend.govuk-fieldset__legend--l
+        .govuk-fieldset__heading
+          How do you want to search?
 
       %span#search-option-hint.govuk-hint
         This is a hint for search choice
 
       .govuk-radios
-        = f.collection_radio_buttons(:search_type, [["By case number", :case_number], ['By defendant', :defendant]], :last, :first) do |b|
+        = f.collection_radio_buttons(:search_option, search_options, :last, :first) do |b|
           .govuk-radios__item
-            = b.radio_button(class: 'govuk-radios__input', checked: @search_type)
-            = b.label(class: 'govuk-label govuk-radios__label', checked: @search_type)
-
+            = b.radio_button(class: 'govuk-radios__input', checked: @search_option.last.eql?(b.value))
+            = b.label(class: 'govuk-label govuk-radios__label')
       %br
       %br
       = f.button('Continue', value: :continue, class: 'govuk-button', 'data-module' => 'govuk-button')
