--- a/app/views/search_filters/_form.html.haml
+++ b/app/views/search_filters/_form.html.haml
@@ -1,6 +1,8 @@
-= form_with url: search_new_path, local: true do |f|
-  = f.govuk_collection_radio_buttons :search_option,
-    search_options,
+= form_with model: @search_filter, local: true do |f|
+  = f.govuk_error_summary
+
+  = f.govuk_collection_radio_buttons :id,
+    Search.filters,
     :id,
     :name,
     :description,
