--- a/app/views/searches/_form.html.haml
+++ b/app/views/searches/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with url: search_path, local: true do |f|
+= form_with model: @search, local: true do |f|
   = f.hidden_field(:filter, value: @filter)
   = f.govuk_text_field(:query, value: @query, label: { text: @label }, hint_text: @hint )
   = f.govuk_submit('Search')
