--- a/app/views/search_filters/new.html.haml
+++ b/app/views/search_filters/new.html.haml
@@ -1,5 +1,5 @@
 .govuk-heading-xl
-  = page_title('Search Filters')
+  = page_title( t('search_filter.page_title') )
 
 .govuk-body
   = render 'form'
