--- a/app/views/layouts/_phase_banner.html.haml
+++ b/app/views/layouts/_phase_banner.html.haml
@@ -1,8 +1,6 @@
 .govuk-phase-banner
   %p.govuk-phase-banner__content
     %strong.govuk-tag.govuk-phase-banner__content__tag
-      alpha
+      = t('generic.alpha')
     %span.govuk-phase-banner__text
-      This is a new service – your
-      %a.govuk-link{href: "#"} feedback
-      will help us to improve it.
+      = t('layouts.application.header.phase_banner_html')
