--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,8 @@
   %body.govuk-template__body.app-body-class{"data-other" => "report:details"}
     :javascript
       document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
-    %a.govuk-skip-link{href: "#main-content"} Skip to main content
+    %a.govuk-skip-link{href: "#main-content"}
+      = t('layouts.application.skip_content')
     %header.govuk-header{"data-module" => "govuk-header", role: "banner"}
       .govuk-header__container.govuk-width-container
         .govuk-header__logo
@@ -37,7 +38,7 @@
     .govuk-width-container.app-width-container--wide
       = render 'layouts/phase_banner'
 
-      = link_to 'Back', back_page_path, class: 'govuk-back-link' unless current_page?(back_page_path)
+      = link_to t('generic.back'), back_page_path, class: 'govuk-back-link' unless current_page?(back_page_path)
 
       %main#main-content.govuk-main-wrapper.app-main-class{role: "main"}
         = render partial: 'layouts/flashes' unless flash.empty?
