--- a/app/views/searches/_results.html.haml
+++ b/app/views/searches/_results.html.haml
@@ -1,5 +1,5 @@
 .govuk-heading-l
-  = "Search for \"#{@query}\" returned #{pluralize(@results.size, 'result')}"
+  = t('search.result_count', query: @query, count: @results.size)
 - @results&.each do |result|
   .govuk-grid-row
     .govuk-grid-column-two-thirds
