Add manual devise-required changes
adding placeholder flash notices
and development action mailer config
as required by devise.

--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -5,3 +5,9 @@
       = key
     .govuk-error-summary__body
       = value
+
+/ placeolder for devise flashes - to be removed
+%p.notice
+  = notice
+%p.alert
+  = alert
