Add govuk_design_system_helper and spec

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,8 +45,7 @@
 
         .govuk-grid-row
           .govuk-grid-column-two-thirds
-            %h1.govuk-heading-xl
-              = yield(:page_title)
+            = content_for :page_heading
             = yield
 
     = render 'layouts/footer'
