--- a/app/views/search_filters/new.html.haml
+++ b/app/views/search_filters/new.html.haml
@@ -1,5 +1,4 @@
-.govuk-heading-xl
-  = page_title( t('search_filter.page_title') )
+= govuk_page_title(t('search_filter.page_title'))
 
 .govuk-body
   = render 'form'
