Apply GDS styling to forgotten password forms

--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,19 +1,23 @@
-%h2 Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  = f.hidden_field :reset_password_token
-  .field
-    = f.label :password, "New password"
-    %br/
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-      %br/
-    = f.password_field :password, autofocus: true, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation, "Confirm new password"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Change my password"
-= render "devise/shared/links"
+= govuk_page_title('Change your password')
+
+.govuk-body
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+    = render "devise/shared/error_messages", resource: resource
+
+    = f.hidden_field :reset_password_token
+
+    = f.govuk_text_field(:password,
+      type: 'password',
+      label: { text: 'New password' },
+      autofocus: true,
+      autocomplete: 'new-password',
+      hint_text: "#{@minimum_password_length} characters minimum")
+
+    = f.govuk_text_field(:password_confirmation,
+      type: 'password',
+      label: { text: 'Confirm new password' },
+      autocomplete: 'new-password')
+
+    = f.govuk_submit("Change my password")
+
+  = render "devise/shared/links"
