--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
           = render 'layouts/govuk_logo'
 
         .govuk-header__content
-          %a.govuk-header__link.govuk-header__link--service-name{href: root_path}
+          %a.govuk-header__link.govuk-header__link--service-name{href: authenticated_root_path}
             = service_name
 
           = render 'layouts/navigation' if user_signed_in?
