--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,4 +16,4 @@
         %td
           = mail_to @user.email, @user.email
   = link_to 'Edit', edit_user_path(current_user)
-  = link_to 'Change Password'
+  = link_to 'Change Password', change_password_user_path(current_user)
