Add change password view

--- a/app/views/users/change_password.html.haml
+++ b/app/views/users/change_password.html.haml
@@ -1,1 +1,18 @@
 = govuk_page_title('Change Password')
+
+.govuk-body
+  = form_with model: [@user] do |f|
+
+    = f.govuk_text_field(:password,
+      type: 'password',
+      label: { text: 'Current password' })
+
+    = f.govuk_text_field(:password,
+      type: 'password',
+      label: { text: 'New password' })
+
+    = f.govuk_text_field(:password_confirmation,
+      type: 'password',
+      label: { text: 'Confirm new password' })
+
+    = f.govuk_submit(t('devise.passwords.user.form.change.submit'))
