--- a/app/views/users/change_password.html.haml
+++ b/app/views/users/change_password.html.haml
@@ -1,9 +1,9 @@
 = govuk_page_title('Change Password')
 
 .govuk-body
-  = form_with model: [@user] do |f|
+  = form_for(@user, url: update_password_user_path(@user)) do |f|
 
-    = f.govuk_text_field(:password,
+    = f.govuk_text_field(:current_password,
       type: 'password',
       label: { text: 'Current password' })
 
