--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,7 +4,7 @@
   %ul#navigation.govuk-header__navigation{"aria-label" => t('layouts.application.header.navigation.top_navigation')}
     %li.govuk-header__navigation-item.govuk-header__navigation-item--active
       = link_to current_user.name,
-            'TODO: signed in user profile path',
+            user_path(current_user),
             class: 'govuk-header__link'
     %li.govuk-header__navigation-item
       = link_to t('layouts.application.header.navigation.sign_out'),
