--- a/app/views/users/change_password.html.haml
+++ b/app/views/users/change_password.html.haml
@@ -1,18 +1,18 @@
-= govuk_page_title('Change Password')
+= govuk_page_title( t('users.change_password.page_title') )
 
 .govuk-body
   = form_for(@user, url: update_password_user_path(@user)) do |f|
 
     = f.govuk_text_field(:current_password,
       type: 'password',
-      label: { text: 'Current password' })
+      label: { text: t('users.change_password.current_password_label') })
 
     = f.govuk_text_field(:password,
       type: 'password',
-      label: { text: 'New password' })
+      label: { text: t('users.change_password.new_password_label') })
 
     = f.govuk_text_field(:password_confirmation,
       type: 'password',
-      label: { text: 'Confirm new password' })
+      label: { text: t('users.change_password.confirm_password_label') })
 
-    = f.govuk_submit(t('devise.passwords.user.form.change.submit'))
+    = f.govuk_submit( t('users.change_password.change_password_button') )
