--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,8 @@
-= govuk_page_title('Edit user '+current_user.name)
+= govuk_page_title(t('users.edit.page_title'))
   
 .govuk-body 
-  = render 'form'
+  = form_with model: [@user] do |f|
+    = f.govuk_text_field(:first_name, label: { text: t('users.edit.first_name') } )
+    = f.govuk_text_field(:last_name, label: { text: t('users.edit.last_name') } )
+    = f.govuk_text_field(:email, label: { text: t('users.edit.email') } )
+    = f.govuk_submit( t('users.edit.save_button') )
