Add missing translations

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,7 +2,7 @@
   
 .govuk-body 
   = form_with model: [@user] do |f|
-    = f.govuk_text_field(:first_name, label: { text: t('users.edit.first_name') } )
-    = f.govuk_text_field(:last_name, label: { text: t('users.edit.last_name') } )
-    = f.govuk_text_field(:email, label: { text: t('users.edit.email') } )
+    = f.govuk_text_field(:first_name, label: { text: t('users.edit.first_name_label') } )
+    = f.govuk_text_field(:last_name, label: { text: t('users.edit.last_name_label') } )
+    = f.govuk_text_field(:email, label: { text: t('users.edit.email_label') } )
     = f.govuk_submit( t('users.edit.save_button') )
