Use govuk_password_field
version 1.1.2 of govuk_design_system_formbuilder
has included this new helper.

--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -6,15 +6,13 @@
 
     = f.hidden_field :reset_password_token
 
-    = f.govuk_text_field(:password,
-      type: 'password',
+    = f.govuk_password_field(:password,
       label: { text: 'New password' },
       autofocus: true,
       autocomplete: 'new-password',
       hint_text: "#{@minimum_password_length} characters minimum")
 
-    = f.govuk_text_field(:password_confirmation,
-      type: 'password',
+    = f.govuk_password_field(:password_confirmation,
       label: { text: 'Confirm new password' },
       autocomplete: 'new-password')
 
