--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,6 +13,8 @@
           = t('users.show.email_label')
         %td
           = mail_to @user.email, @user.email
-  = link_to t('users.show.edit_link'), edit_user_path(@user)
 
-  = link_to t('users.show.change_password_link'), change_password_user_path(@user)
+  - if can? :edit, @user
+    = link_to t('users.show.edit_link'), edit_user_path(@user), class: 'govuk-link'
+
+  = link_to t('users.show.change_password_link'), change_password_user_path(@user), class: 'govuk-link'
