--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,4 @@
-= govuk_page_title(t('users.show.page_title'))
+= govuk_page_title(t('users.show.page_title', name: @user.name))
 
 .govuk-body
   %table
