Add basic user index page for managers

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -4,5 +4,5 @@
   = form_with model: @user, local: true do |f|
     = f.govuk_text_field(:first_name, label: { text: t('users.edit.first_name_label') } )
     = f.govuk_text_field(:last_name, label: { text: t('users.edit.last_name_label') } )
-    = f.govuk_text_field(:email, label: { text: t('users.edit.email_label') } )
+    = f.govuk_email_field(:email, label: { text: t('users.edit.email_label') } )
     = f.govuk_submit( t('users.edit.save_button') )
