--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,11 +1,16 @@
 = govuk_page_title(t('users.index.page_title'))
 
+= link_to t('users.index.new_link'), new_user_path, class: 'govuk-link'
+
+%hr
 %table
   - @users.each do |user|
     %tr{"data-user-id": "#{user.id}"}
       %td
-        = link_to user.name, user_path(user)
+        = link_to user.name, user_path(user), class: 'govuk-link'
       %td
-        = link_to t('users.index.edit'), edit_user_path(user)
+        = mail_to user.email, user.email, class: 'govuk-link', target: '_blank'
+      %td
+        = link_to t('users.index.edit'), edit_user_path(user), class: 'govuk-link'
         |
-        = link_to t('users.index.delete'), user_path(user), method: :delete, data: { confirm: t('users.index.delete_confirmation', name: user.name) }
+        = link_to t('users.index.delete'), user_path(user), method: :delete, data: { confirm: t('users.index.delete_confirmation', name: user.name) }, class: 'govuk-link'
