--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,26 +1,42 @@
 = govuk_page_title(t('users.show.page_title', name: @user.name))
 
 .govuk-body
-  %table
-    %tbody
-      %tr
-        %th{ scope: 'row' }
+  %table.govuk-table
+    %caption.govuk-table__caption
+      = t('users.show.caption')
+
+    %tbody.govuk-table__body
+      %tr.govuk-table__row
+        %th.govuk-table__header{ scope: 'row' }
           = t('users.show.name_label')
-        %td
+        %td.govuk-table__cell
           = @user.name
-      %tr
-        %th{ scope: 'row' }
+      %tr.govuk-table__row
+        %th.govuk-table__header{ scope: 'row' }
           = t('users.show.email_label')
-        %td
+        %td.govuk-table__cell
           = mail_to @user.email, class: 'govuk-link', target: '_blank' do
             = @user.email
             %span.govuk-visually-hidden= t('generic.new_window')
-      %tr
-        %th{ scope: 'row' }
+      %tr.govuk-table__row
+        %th.govuk-table__header{ scope: 'row' }
           = t('users.show.roles_label')
-        %td
+        %td.govuk-table__cell
           = @user.roles.map(&:titlecase).join(', ')
-  - if can? :edit, @user
-    = link_to t('users.show.edit_link'), edit_user_path(@user), class: 'govuk-link'
 
-  = link_to t('users.show.change_password_link'), change_password_user_path(@user), class: 'govuk-link'
+  - if can? :edit, @user
+    = link_to t('users.show.edit_link'),
+      edit_user_path(@user),
+      'aria-label': t('users.show.edit_link_aria', name: @user.name),
+      class: 'govuk-button',
+      'data-module': 'govuk-button',
+      draggable: 'false',
+      role: 'button'
+
+  = link_to t('users.show.change_password_link'),
+    change_password_user_path(@user),
+    'aria-label': t('users.show.change_password_link_aria', name: @user.name),
+    class: 'govuk-button',
+    'data-module': 'govuk-button',
+    draggable: 'false',
+    role: 'button'
