Add error summaries form
Missed previously.

--- a/app/views/users/change_password.html.haml
+++ b/app/views/users/change_password.html.haml
@@ -2,6 +2,7 @@
 
 .govuk-body
   = form_for(@user, url: update_password_user_path(@user)) do |f|
+    = f.govuk_error_summary
 
     = f.govuk_text_field(:current_password,
       type: 'password',
