--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,15 +1,4 @@
 = govuk_page_title(t('users.edit.page_title'))
 
 .govuk-body
-  = form_with model: @user, local: true do |f|
-    = f.govuk_error_summary
-    = f.govuk_text_field(:first_name, label: { text: t('users.edit.first_name_label') } )
-    = f.govuk_text_field(:last_name, label: { text: t('users.edit.last_name_label') } )
-    = f.govuk_email_field(:email, label: { text: t('users.edit.email_label') } )
-    = f.govuk_email_field(:email_confirmation, value: @user.email, label: { text: t('users.edit.email_confirmation_label') } )
-    = f.govuk_collection_check_boxes :roles,
-        User.valid_roles,
-        :to_s,
-        :titlecase,
-        legend: { text: "What roles does the user have?" }
-    = f.govuk_submit( t('users.edit.save_button') )
+  = render 'form'
