Prevent i18n translation error
Could happen if returned object from
api/adaptor does not have a DoB.

--- a/app/views/searches/_results.html.haml
+++ b/app/views/searches/_results.html.haml
@@ -17,4 +17,4 @@
           %td.govuk-table__cell= result.prosecution_case_reference
           %td.govuk-table__cell= result.first_name
           %td.govuk-table__cell= result.last_name
-          %td.govuk-table__cell= l(result.date_of_birth.to_date)
+          %td.govuk-table__cell= l(result.date_of_birth&.to_date)
