--- a/app/views/searches/_results.html.haml
+++ b/app/views/searches/_results.html.haml
@@ -1,20 +1,8 @@
 = render 'results_header'
 
 - if @results.empty?
-  = render 'no_results'
+  = render 'results/none'
+- elsif @results.first.is_a? CourtDataAdaptor::Resource::ProsecutionCase
+  = render 'results/prosecution_case'
 - else
-  %table.govuk-table
-    %caption.govuk-table__caption.govuk-visually-hidden
-      = t('search.result.caption')
-    %thead.govuk-table__head
-      %tr.govuk-table__row
-        / / # - @results.each do |value|
-        /   %th.govuk-table__header{ scope: 'col' }
-        /     = value.to_s.humanize
-    %tbody.govuk-table__body
-      - @results&.each do |result|
-        %tr.govuk-table__row
-          %td.govuk-table__cell= result.prosecution_case_reference
-          %td.govuk-table__cell= result.first_name
-          %td.govuk-table__cell= result.last_name
-          %td.govuk-table__cell= l(result.date_of_birth&.to_date)
+  = render 'results/defendant'
