[CACP-120] Structure Sass project

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -10,12 +10,4 @@ $govuk-font-url-function: frontend-font-url;
 $govuk-image-url-function: frontend-image-url;
 @import "~govuk-frontend/govuk/all";
 
-.lcdui-notice-summary {
-  .govuk-error-summary {
-    border-color: $govuk-brand-colour;
-  }
-
-  .govuk-error-message {
-    color: $govuk-brand-colour;
-  }
-}
+@import "components/summary"
