--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,19 +1,25 @@
-- if controller_name != 'sessions'
-  = link_to t('devise.shared.links.sign_in'), new_session_path(resource_name), class: 'govuk-link'
-  %br/
-  / - if devise_mapping.registerable? && controller_name != 'registrations'
-  / = link_to "Sign up", new_registration_path(resource_name)
-  / %br/
-- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to t('devise.shared.links.forgot_password'), new_password_path(resource_name), class: 'govuk-link'
-  %br/
-- if devise_mapping.confirmable? && controller_name != 'confirmations'
-  = link_to t('devise.shared.links.confirmation_receipt'), new_confirmation_path(resource_name), class: 'govuk-link'
-  %br/
-- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  = link_to t('devise.shared.links.unlock_receipt'), new_unlock_path(resource_name), class: 'govuk-link'
-  %br/
-- if devise_mapping.omniauthable?
-  - resource_class.omniauth_providers.each do |provider|
-    = link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider)
-    %br/
+%ul.govuk-list
+  - if controller_name != 'sessions'
+    %li
+      = link_to t('devise.shared.links.sign_in'), new_session_path(resource_name), class: 'govuk-link'
+
+    / - if devise_mapping.registerable? && controller_name != 'registrations'
+    / %li
+    / = link_to "Sign up", new_registration_path(resource_name)
+
+  - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
+    %li
+      = link_to t('devise.shared.links.forgot_password'), new_password_path(resource_name), class: 'govuk-link'
+
+  - if devise_mapping.confirmable? && controller_name != 'confirmations'
+    %li
+      = link_to t('devise.shared.links.confirmation_receipt'), new_confirmation_path(resource_name), class: 'govuk-link'
+
+  - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
+    %li
+      = link_to t('devise.shared.links.unlock_receipt'), new_unlock_path(resource_name), class: 'govuk-link'
+
+  - if devise_mapping.omniauthable?
+    - resource_class.omniauth_providers.each do |provider|
+      %li
+        = link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider)
